update config spec to leverage package names as dotted strings vs Python objects

--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -2,3 +2,8 @@
 ++++++++++++++++++
 
 * initial release
+
+1.1.0
+++++++++++++++++++
+
+* update config spec to leverage package names as dotted strings vs Python objects
