--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -7,3 +7,8 @@
 ++++++++++++++++++
 
 * update config spec to leverage package names as dotted strings vs Python objects
+
+1.1.1
+++++++++++++++++++
+
+* fix bug with dotted name package resolution
